--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+"name": "find-a-doctor",
+  "version": "0.1.0",
+
+  "engines": {
+    "node": "6.10.2"
+  },
+  "dependencies": {
+    "ejs": "2.5.6",
+    "express": "4.15.2"
+  },
 "scripts": {
     "start":"node index.js"
 }
